--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         document.querySelector('.ball-1').style.visibility='hidden';
         document.querySelector('h1').innerText = one;
         document.querySelector('.p1').innerText=one;
+        let result1 = eval(currentDisplay);
+        currentDisplay = result1;
+        document.querySelector('#display').value = currentDisplay;
+         if (result1>=target) {
+    document.querySelector('h2').innerText='You Win';
+} else {
+    document.querySelector('h2').innerText='';
+}
         ">1</button>
 
             <button class="ball-2" onclick="
@@ -40,6 +48,14 @@
         document.querySelector('.ball-2').style.visibility='hidden';
         document.querySelector('h1').innerText = two;
         document.querySelector('.p2').innerText=two;
+        let result2 = eval(currentDisplay);
+        currentDisplay = result2;
+        document.querySelector('#display').value = currentDisplay;
+        if (result2>=target) {
+    document.querySelector('h2').innerText='You Win';
+} else {
+    document.querySelector('h2').innerText='';
+}
         ">2</button>
 
             <button class="ball-3" onclick="
@@ -49,6 +65,14 @@
         document.querySelector('.ball-3').style.visibility='hidden';
         document.querySelector('h1').innerText = three;
         document.querySelector('.p3').innerText=three;
+        let result3 = eval(currentDisplay);
+        currentDisplay = result3;
+        document.querySelector('#display').value = currentDisplay;
+        if (result3>=target) {
+    document.querySelector('h2').innerText='You Win';
+} else {
+    document.querySelector('h2').innerText='';
+}
         ">3</button>
 
             <button class="ball-4" onclick="
@@ -58,6 +82,14 @@
         document.querySelector('.ball-4').style.visibility='hidden';
         document.querySelector('h1').innerText = four;
         document.querySelector('.p4').innerText=four;
+        let result4 = eval(currentDisplay);
+        currentDisplay = result4;
+        document.querySelector('#display').value = currentDisplay;
+        if (result4>=target) {
+    document.querySelector('h2').innerText='You Win';
+} else {
+    document.querySelector('h2').innerText='';
+}
         ">4</button>
 
             <button class="ball-5" onclick="
@@ -67,6 +99,14 @@
         document.querySelector('.ball-5').style.visibility='hidden';
         document.querySelector('h1').innerText = five;
         document.querySelector('.p5').innerText=five;
+        let result5 = eval(currentDisplay);
+        currentDisplay = result5;
+        document.querySelector('#display').value = currentDisplay;
+        if (result5>=target) {
+    document.querySelector('h2').innerText='You Win';
+} else {
+    document.querySelector('h2').innerText='';
+}
         ">5</button>
 
             <button class="ball-6" onclick="
@@ -76,18 +116,18 @@
         document.querySelector('.ball-6').style.visibility='hidden';
         document.querySelector('h1').innerText = six;
         document.querySelector('.p6').innerText=six;
-        ">6</button>
-
-            <button class="finish" onclick="
-        let result = eval(currentDisplay);
-        currentDisplay = result;
+        let result6 = eval(currentDisplay);
+        currentDisplay = result6;
         document.querySelector('#display').value = currentDisplay;
-        if (result > target) {
-            document.querySelector('h2').innerText='You Win';
-        } else {
-            document.querySelector('h2').innerText='You Lose';
-        }
-        ">finish</button>
+        let tie = target - 1;
+        if (result6 == tie) {
+            document.querySelector('h2').innerText='Match Tie';
+} else if (result6>=target) {
+    document.querySelector('h2').innerText='You Win';
+} else {
+    document.querySelector('h2').innerText='You Lose';
+}
+        ">6</button>
 
         </div>
 
@@ -106,11 +146,9 @@
         let currentDisplay = '';
         document.querySelector('#display').value = currentDisplay;
 
-        let target = (Math.floor(Math.random()*15)+17);
+        let target = (Math.floor(Math.random() * 15) + 17);
         document.querySelector('span').innerText = target;
 
-        let matchScore;
-        
     </script>
 </body>
 
